singletons-base/tests/compile-and-dump/Singletons/T401.golden

Singletons/T401.hs:0:0: error:
    `singletons-th` does not support higher-rank `forall`s
In the type: (forall a_0 . a_0 -> a_0) -> b_1 -> b_1

  |
5 | $(singletons [d|
  |  ^^^^^^^^^^^^^^^...

Singletons/T401.hs:0:0: error: Q monad failure
  |
5 | $(singletons [d|
  |  ^^^^^^^^^^^^^^^...
